// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for SQ 1`] = `
<EmptyInstance
  currentUser={
    Object {
      "isLoggedIn": false,
    }
  }
/>
`;

exports[`renders correctly for SQ 2`] = `
<EmptyInstance
  currentUser={
    Object {
      "isLoggedIn": true,
      "permissions": Object {
        "global": Array [
          "provisioning",
        ],
      },
    }
  }
/>
`;
